platform/modules/infra/templates/gateway.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: gateway
  namespace: kgateway-system
spec:
  gatewayClassName: kgateway
  listeners:
  - protocol: HTTP
    port: 8000
    name: http-listener
    allowedRoutes:
      namespaces:
        from: All
